5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_1330.log
== TEST (2019-03-26 18:03:30) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:03:34) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.154649
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:03:52) 
-- CODE:
round(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:04:03) 
-- CODE:
round(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:04:19) 
-- CODE:
round(x250/6n)
-- ERROR:
File "XXXX", line 1
    round(x250/6n)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:04:29) 
-- CODE:
round(250/6)
-- ERROR:
File "XXXX", line 1
    round(x250/6n)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:04:34) 
-- CODE:
round(250/6)
-- ERROR:
File "XXXX", line 1
    round(x250/6n)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:05:12) 
-- CODE:
printround(250/6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printround(250/6)
NameError: name 'printround' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:05:27) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:30) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.215212
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:38) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.218626
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:05:40) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:41) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:06:45) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.162366
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:05) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:22) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:07:26) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.136216
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:45) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:01) 
-- CODE:
print(round(250/6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:08:03) 
-- CODE:
print(round(250/6)
-- EXECUTION TIME:
0.140946
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:25) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:08:28) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.244727
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:06) 
-- CODE:
print(round((250/6))
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:20) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:37) 
-- CODE:
print=round(250/6))
-- ERROR:
File "XXXX", line 1
    print=round(250/6))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:47) 
-- CODE:
print=round(250/6)
-- ERROR:
File "XXXX", line 1
    print=round(250/6))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:10:18) 
-- CODE:
print_round(250/6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print_round(250/6)
NameError: name 'print_round' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:10:32) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:39) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.140368
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:18:11) 
-- CODE:
250/6
print(round(x.n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x.n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:01) 
-- CODE:
250/6
print(round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:30) 
-- CODE:
x=250/6
print(round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:55) 
-- CODE:
x=250/6
print(round(x, 6))
-- OUTPUT:
41.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:58) 
-- CODE:
x=250/6
print(round(x, 6))
-- EXECUTION TIME:
0.208663
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:02) 
-- CODE:
x=250/6
print(round(x, 6))
-- OUTPUT:
41.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:22) 
-- CODE:
x=250/6
print(round(x, 1))
-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:24) 
-- CODE:
x=250/6
print(round(x, 1))
-- EXECUTION TIME:
0.137296
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:32) 
-- CODE:
x=250/6
print(round(x, 1))
-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:40) 
-- CODE:
x=250/6
print(round(x, 1))
-- EXECUTION TIME:
0.16496
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:47) 
-- CODE:
x=250/6
print(round(x, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:52) 
-- CODE:
x=250/6
print(round(x, 2))
-- EXECUTION TIME:
0.133659
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
